# AVInsight

./: .gitignore  README.md  app.py  app.spec  app_test.spec  install_dependencies.bat  pyproject.toml  startup_script.ps1
app.build/: @link_input.txt  __constants.c  __helpers.c  __loader.c  ccache-1328.txt  ccache-16104.txt  ccache-7988.txt  module.__main__.c  module.__main__.const  module.__parents_main__.c  module.__parents_main__.const  module.ansicon.c  module.ansicon.const  module.bidict._abc.c  module.bidict._abc.const  module.bidict._base.c  module.bidict._base.const  module.bidict._bidict.c  module.bidict._bidict.const  module.bidict._dup.c  module.bidict._dup.const  module.bidict._exc.c  module.bidict._exc.const  module.bidict._frozenbidict.c  module.bidict._frozenbidict.const  module.bidict._frozenordered.c  module.bidict._frozenordered.const  module.bidict._iter.c  module.bidict._iter.const  module.bidict._named.c  module.bidict._named.const  module.bidict._orderedbase.c  module.bidict._orderedbase.const  module.bidict._orderedbidict.c  module.bidict._orderedbidict.const  module.bidict._typing.c  module.bidict._typing.const  module.bidict.c  module.bidict.const  module.bidict.metadata.c  (+440 more)
app.dist/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _decimal.pyd  _elementtree.pyd  _hashlib.pyd  _lzma.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd
app.onefile-build/: ccache-10044.txt  ccache-16540.txt  ccache-7616.txt  scons-report.txt
config/: config.json  load_config.py
(+30 files in other folders)
